--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -27,11 +27,6 @@
 @import '../../node_modules/swiper/swiper-bundle';
 
 // общие стили
-// main
-.main {
-  margin-bottom: 144px;
-}
-
 .button {
   align-self: flex-start;
 
